[package]
name = "adventofcode"
version = "0.1.0"
edition = "2021"

[features]
default = ["day-17"]
day-1 = []
day-2 = []
day-3 = []
day-4 = []
day-5 = []
day-6 = []
day-7 = []
day-8 = ["dep:divisors"]
day-9 = []
day-10 = []
day-11 = []
day-12 = []
day-13 = ["dep:rayon"]
day-14 = []
day-15 = []
day-16 = []
day-17 = []
day-18 = []
day-19 = []
day-20 = ["dep:divisors"]
day-21 = []
day-22 = []
day-23 = ["dep:rayon"]
day-24 = []
day-25 = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
divisors = { version = "0.2.1", optional = true }
humantime = "2.1.0"
indoc = "2"
regex = "1.11.1"
rayon = { version = "1.8.0", optional = true }